Add Docker containerization and production deployment setup
- Add Dockerfile with multi-stage build for Elixir/Phoenix app
- Add docker-compose.yml for local development with PostgreSQL
- Add .dockerignore to optimize build context
- Add release configuration and overlay scripts for production
- Update environment template with database and deployment vars
- Configure application for containerized deployment

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 # OpenWeather API Key
+DATABASE_URL=postgres://postgres:postgres@db:5432/weather_app_prod
+SECRET_KEY_BASE=your_secret_key_base_here
 OPENWEATHER_API_KEY=your_api_key_here
-OPENWEATHER_API_BASE_URL=https://api.openweathermap.org/data/2.5/
-OPENWEATHER_API_GEO_URL=http://api.openweathermap.org/geo/1.0/
+OPENWEATHER_API_BASE_URL=https://api.openweathermap.org
